test/optimizations/inline/directCall.good
directCall.chpl:5: error: Attempt to inline a function, 'foo', that calls itself
